<resources>
    <string name="app_name">Contacts</string>
    <string name="add">ADD</string>
    <string name="my_contacts">MY CONTACTS</string>
    <string name="update">UPDATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click">click</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="name1">Name</string>
    <string name="delete">Delete</string>
    <string name="phone_number1">Phone Number</string>
    <string name="update1">Update</string>
</resources>