<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateFragment">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name"
    android:textSize="20sp"
    android:layout_marginTop="70dp"
    android:id="@+id/textview"/>
<EditText

    android:focusableInTouchMode="true"
    android:id="@+id/edit1"
    android:layout_marginTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/textview"/>
<TextView
    android:id="@+id/textview1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone_number1"
    android:textSize="20sp"
    android:layout_marginTop="120dp"/>
<EditText

    android:focusableInTouchMode="true"
    android:layout_marginTop="100dp"
    android:layout_toRightOf="@id/textview1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/edit2"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/update1"
    android:layout_marginTop="200dp"
    android:id="@+id/update_button"
    android:layout_centerHorizontal="true"/>

</RelativeLayout>